Fix mobile project detail aside z-index glitch.

--- a/css/main.scss
+++ b/css/main.scss
@@ -923,6 +923,9 @@ h3{
 }
 
 #about{
+  h2{
+    font-weight: normal;
+  }
   .fb-like{
     display:block;
     position:relative;
@@ -1167,7 +1170,7 @@ h3{
   }
   aside{
     position: absolute;
-    z-index:998;
+    z-index:8;
     height:auto;
     left: 0;
     width:100%;
@@ -1179,6 +1182,7 @@ h3{
     @include transition (opacity, $pageTransitionSpeed, ease);
     &.active{
       top: 0; //$navHeight;
+      z-index: 10;
     }
     .content{
       margin: 60px 20px 60px;
@@ -1233,7 +1237,10 @@ h3{
   }
   
   aside{
-      -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
+    &.active{
+      top: 0;
+    }
   }
 
   $navHeight: 40px;
@@ -1250,9 +1257,7 @@ h3{
       left:30px;
     }
   }
-  aside.active{
-    top: 0; //$navHeight;
-  }
+
   .buttons{
     position: relative;
     top:-5px;
